releasing a beta 0.0.1-beta

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "butler.js",
-  "version": "0.0.1",
+  "version": "0.0.1-beta",
   "description": "Butler is your I/O javascript voice driven major-domo",
   "homepage": "http://github.com/720kb/butler",
   "authors": [
