--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "rules": {
     "no-cond-assign": 2,
     "no-constant-condition": 2,
-    "no-comma-dangle": 2,
+    "comma-dangle": 2,
     "no-control-regex": 2,
     "no-debugger": 2,
     "no-dupe-keys": 2,
@@ -64,8 +64,7 @@
       2,
       "outside"
     ],
-    "global-strict": [2, "never"],
-    "no-extra-strict": 2,
+    "strict": [2, "never"],
     "strict": 2,
     "no-catch-shadow": 2,
     "no-delete-var": 2,
@@ -97,8 +96,9 @@
     "no-lonely-if": 2,
     "no-new-object": 2,
     "no-spaced-func": 2,
-    "no-space-before-semi": 2,
-    "no-wrap-func": 2,
+    "semi-spacing": 2,
+    "no-underscore-dangle": 2,
+    "no-extra-parens": 2,
     "quotes": [
       2,
       "single",
@@ -113,7 +113,15 @@
       2,
       "always"
     ],
-    "space-in-brackets": [
+    "object-curly-spacing": [
+      2,
+      "never"
+    ],
+    "array-bracket-spacing": [
+      2,
+      "never"
+    ],
+    "computed-property-spacing": [
       2,
       "never"
     ],
@@ -122,12 +130,11 @@
     "space-unary-ops": 2,
     "one-var": 2,
     "wrap-regex": 2,
-    "no-underscore-dangle": 2,
 
     "no-extra-boolean-cast": 1,
     "no-console": 1,
     "no-alert": 1,
-    "no-empty-class": 1,
+    "no-empty-character-class": 1,
     "no-ex-assign": 1,
     "no-func-assign": 1,
     "valid-jsdoc": 1,
